--- a/docFlowAPI/docFlowAPI.csproj
+++ b/docFlowAPI/docFlowAPI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="UploadedFiles\Shablons\" />
+    <Folder Include="UploadedFiles\FactDocs\" />
   </ItemGroup>
 
 </Project>
